# toaru-vtt

./: .mise.toml  Makefile  README.md  docker-compose.yml
.github/workflows/: server.yml  web.yml
server/: Dockerfile  go.mod  go.sum  main.go  main_test.go
server/connect/: canvas.go  code.go  code_test.go  keyval.go
tests/load_tests/: requirements.txt  sessions.py
toaru-server/: Cargo.toml
toaru-server/migrations/: 20250222015756_create_todos_table.sql
toaru-server/scripts/: init-db.sh
toaru-server/src/: main.rs  passphrase.rs
toaru-server/wordlist/: wordlist.txt
toaru-web/: .gitignore  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
toaru-web/src/: App.test.tsx  App.tsx  Canvas.tsx  Whiteboard.test.tsx  Whiteboard.tsx  geometry.ts  index.html
website/: Dockerfile  package.json  vitest.config.ts
website/src/: App.tsx
website/src/__tests__/: App.test.tsx
