[package]
name = "toaru-vtt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
poem = "3.1.7"
poem-openapi = { version = "5.1.8", features = ["swagger-ui", "websocket"] }
rand = "0.9.0"
tokio = { version = "1.42.0", features = ["full"] }
tokio-stream = "0.1.17"
tracing-subscriber = "0.3.19"
